--- a/src/input.css
+++ b/src/input.css
@@ -4,16 +4,17 @@
 
 body {
   font-family: "Inter", sans-serif;
+  overflow-x: hidden;
 }
 
 .navbar-fixed {
-  @apply fixed z-[9999] bg-white bg-opacity-80;
-  backdrop-filter: blur(5px);
-  box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.3);
+  @apply fixed z-[9999];
+  width: 100%;
+  top: 0;
 }
 
 .hamburger-line {
-  @apply w-[30px] h-[3px] my-2 block bg-black;
+  @apply w-[30px] h-[3px] my-2 block bg-white bg-blend-difference;
 }
 
 .hamburger-active > span:nth-child(1) {
