--- a/src/output.css
+++ b/src/output.css
@@ -8,7 +8,6 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-orange-500: oklch(70.5% 0.213 47.604);
-    --color-amber-50: oklch(98.7% 0.022 95.277);
     --color-green-600: oklch(62.7% 0.194 149.214);
     --color-blue-800: oklch(42.4% 0.199 265.638);
     --color-indigo-500: oklch(58.5% 0.233 277.117);
@@ -41,6 +40,7 @@
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
     --font-weight-light: 300;
+    --font-weight-normal: 400;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
@@ -226,20 +226,11 @@
   .relative {
     position: relative;
   }
-  .end-0 {
-    inset-inline-end: calc(var(--spacing) * 0);
-  }
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
   .top-\[-1rem\] {
     top: -1rem;
-  }
-  .top-\[-5rem\] {
-    top: -5rem;
-  }
-  .top-\[-20rem\] {
-    top: -20rem;
   }
   .top-\[-300\] {
     top: -300;
@@ -262,6 +253,9 @@
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
+  .bottom-30 {
+    bottom: calc(var(--spacing) * 30);
+  }
   .bottom-\[-10\.5rem\] {
     bottom: -10.5rem;
   }
@@ -279,9 +273,6 @@
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
-  }
-  .left-1 {
-    left: calc(var(--spacing) * 1);
   }
   .left-1\/2 {
     left: calc(1/2 * 100%);
@@ -367,9 +358,6 @@
   .z-\[8\] {
     z-index: 8;
   }
-  .z-\[21\] {
-    z-index: 21;
-  }
   .z-\[9999\] {
     z-index: 9999;
   }
@@ -399,6 +387,9 @@
   }
   .mx-auto {
     margin-inline: auto;
+  }
+  .my-5 {
+    margin-block: calc(var(--spacing) * 5);
   }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
@@ -472,15 +463,6 @@
   .inline-flex {
     display: inline-flex;
   }
-  .table {
-    display: table;
-  }
-  .h-3 {
-    height: calc(var(--spacing) * 3);
-  }
-  .h-4 {
-    height: calc(var(--spacing) * 4);
-  }
   .h-4\.5 {
     height: calc(var(--spacing) * 4.5);
   }
@@ -501,9 +483,6 @@
   }
   .h-\[3\.5rem\] {
     height: 3.5rem;
-  }
-  .h-\[14px\] {
-    height: 14px;
   }
   .h-\[15rem\] {
     height: 15rem;
@@ -538,6 +517,9 @@
   .h-\[58vmin\] {
     height: 58vmin;
   }
+  .h-\[70px\] {
+    height: 70px;
+  }
   .h-\[70rem\] {
     height: 70rem;
   }
@@ -550,23 +532,8 @@
   .max-h-\[100px\] {
     max-height: 100px;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
-  .w-1\/4 {
-    width: calc(1/4 * 100%);
-  }
   .w-1\/5 {
     width: calc(1/5 * 100%);
-  }
-  .w-1\/6 {
-    width: calc(1/6 * 100%);
-  }
-  .w-3 {
-    width: calc(var(--spacing) * 3);
-  }
-  .w-4 {
-    width: calc(var(--spacing) * 4);
   }
   .w-4\.5 {
     width: calc(var(--spacing) * 4.5);
@@ -613,17 +580,8 @@
   .w-\[1\.5rem\] {
     width: 1.5rem;
   }
-  .w-\[1\/6\] {
-    width: 1/6;
-  }
-  .w-\[5rem\] {
-    width: 5rem;
-  }
   .w-\[7\.5rem\] {
     width: 7.5rem;
-  }
-  .w-\[14px\] {
-    width: 14px;
   }
   .w-\[31rem\] {
     width: 31rem;
@@ -634,6 +592,9 @@
   .w-\[61rem\] {
     width: 61rem;
   }
+  .w-\[70px\] {
+    width: 70px;
+  }
   .w-\[80rem\] {
     width: 80rem;
   }
@@ -642,9 +603,6 @@
   }
   .max-w-xl {
     max-width: var(--container-xl);
-  }
-  .border-collapse {
-    border-collapse: collapse;
   }
   .origin-\[0\] {
     transform-origin: 0;
@@ -674,29 +632,17 @@
   .cursor-pointer {
     cursor: pointer;
   }
-  .resize {
-    resize: both;
-  }
   .list-none {
     list-style-type: none;
   }
   .flex-col {
     flex-direction: column;
   }
-  .flex-row {
-    flex-direction: row;
-  }
   .flex-wrap {
     flex-wrap: wrap;
   }
-  .place-content-center {
-    place-content: center;
-  }
   .items-center {
     align-items: center;
-  }
-  .items-end {
-    align-items: flex-end;
   }
   .items-start {
     align-items: flex-start;
@@ -707,23 +653,14 @@
   .justify-center {
     justify-content: center;
   }
-  .justify-end {
-    justify-content: flex-end;
-  }
-  .justify-items-end {
-    justify-items: end;
-  }
-  .justify-items-start {
-    justify-items: start;
-  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
-  .gap-5 {
-    gap: calc(var(--spacing) * 5);
-  }
   .gap-16 {
     gap: calc(var(--spacing) * 16);
+  }
+  .gap-17 {
+    gap: calc(var(--spacing) * 17);
   }
   .gap-\[0\.363636em\] {
     gap: 0.363636em;
@@ -765,10 +702,6 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-2 {
-    border-style: var(--tw-border-style);
-    border-width: 2px;
-  }
   .border-\[1px\] {
     border-style: var(--tw-border-style);
     border-width: 1px;
@@ -781,8 +714,8 @@
     --tw-border-style: none;
     border-style: none;
   }
-  .border-amber-50 {
-    border-color: var(--color-amber-50);
+  .border-\[rgba\(178\,224\,255\,0\.7\)\] {
+    border-color: rgba(178,224,255,0.7);
   }
   .border-slate-300 {
     border-color: var(--color-slate-300);
@@ -798,6 +731,9 @@
   }
   .bg-\[\#001eff\] {
     background-color: #001eff;
+  }
+  .bg-\[\#4accff\] {
+    background-color: #4accff;
   }
   .bg-\[\#0035e4\] {
     background-color: #0035e4;
@@ -839,8 +775,16 @@
     --tw-gradient-position: to bottom in oklab;
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
+  .bg-gradient-to-r {
+    --tw-gradient-position: to right in oklab;
+    background-image: linear-gradient(var(--tw-gradient-stops));
+  }
   .from-\[rgba\(0\,5\,32\,0\.01\)\] {
     --tw-gradient-from: rgba(0,5,32,0.01);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-\[rgba\(22\,119\,255\,0\.5\)0\%\] {
+    --tw-gradient-from: rgba(22,119,255,0.5)0%;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .from-dark {
@@ -856,6 +800,11 @@
   }
   .from-10\% {
     --tw-gradient-from-position: 10%;
+  }
+  .via-\[\#b2e0ff\] {
+    --tw-gradient-via: #b2e0ff;
+    --tw-gradient-via-stops: var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-via-stops);
   }
   .via-\[rgba\(0\,5\,20\,1\)\] {
     --tw-gradient-via: rgba(0,5,20,1);
@@ -878,11 +827,18 @@
   .via-70\% {
     --tw-gradient-via-position: 70%;
   }
+  .via-80\% {
+    --tw-gradient-via-position: 80%;
+  }
   .via-98\% {
     --tw-gradient-via-position: 98%;
   }
   .to-\[rgba\(0\,5\,32\,1\)\] {
     --tw-gradient-to: rgba(0,5,32,1);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-\[rgba\(22\,119\,255\,0\.5\)50\%\] {
+    --tw-gradient-to: rgba(22,119,255,0.5)50%;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .to-darkbanget {
@@ -896,14 +852,23 @@
   .to-90\% {
     --tw-gradient-to-position: 90%;
   }
+  .bg-\[length\:200\%_100\%\] {
+    background-size: 200% 100%;
+  }
+  .bg-clip-text {
+    background-clip: text;
+  }
+  .bg-left {
+    background-position: left;
+  }
   .fill-current {
     fill: currentcolor;
   }
   .stroke-\[rgba\(0\,0\,0\,0\.8\)\] {
     stroke: rgba(0,0,0,0.8);
   }
-  .stroke-\[rgba\(221\,221\,221\,0\.8\)\] {
-    stroke: rgba(221,221,221,0.8);
+  .stroke-\[rgba\(178\,224\,255\,1\)\] {
+    stroke: rgba(178,224,255,1);
   }
   .stroke-2 {
     stroke-width: 2;
@@ -932,9 +897,6 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
-  .px-5 {
-    padding-inline: calc(var(--spacing) * 5);
-  }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
   }
@@ -950,11 +912,8 @@
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
   }
-  .px-16 {
-    padding-inline: calc(var(--spacing) * 16);
-  }
-  .px-27 {
-    padding-inline: calc(var(--spacing) * 27);
+  .px-20 {
+    padding-inline: calc(var(--spacing) * 20);
   }
   .px-36 {
     padding-inline: calc(var(--spacing) * 36);
@@ -977,9 +936,6 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
-  .py-5 {
-    padding-block: calc(var(--spacing) * 5);
-  }
   .py-7 {
     padding-block: calc(var(--spacing) * 7);
   }
@@ -994,6 +950,9 @@
   }
   .py-\[10px\] {
     padding-block: 10px;
+  }
+  .pt-5 {
+    padding-top: calc(var(--spacing) * 5);
   }
   .pt-10 {
     padding-top: calc(var(--spacing) * 10);
@@ -1025,32 +984,14 @@
   .pb-100 {
     padding-bottom: calc(var(--spacing) * 100);
   }
-  .pl-1 {
-    padding-left: calc(var(--spacing) * 1);
-  }
   .pl-3 {
     padding-left: calc(var(--spacing) * 3);
-  }
-  .pl-7 {
-    padding-left: calc(var(--spacing) * 7);
-  }
-  .pl-10 {
-    padding-left: calc(var(--spacing) * 10);
-  }
-  .pl-20 {
-    padding-left: calc(var(--spacing) * 20);
   }
   .pl-34 {
     padding-left: calc(var(--spacing) * 34);
   }
   .text-center {
     text-align: center;
-  }
-  .text-left {
-    text-align: left;
-  }
-  .text-right {
-    text-align: right;
   }
   .text-3xl {
     font-size: var(--text-3xl);
@@ -1076,9 +1017,6 @@
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
-  .text-\[0\.5rem\] {
-    font-size: 0.5rem;
-  }
   .text-\[0\.8rem\] {
     font-size: 0.8rem;
   }
@@ -1091,11 +1029,11 @@
   .text-\[2\.3rem\] {
     font-size: 2.3rem;
   }
+  .text-\[2\.5rem\] {
+    font-size: 2.5rem;
+  }
   .text-\[4rem\] {
     font-size: 4rem;
-  }
-  .text-\[8px\] {
-    font-size: 8px;
   }
   .text-\[12px\] {
     font-size: 12px;
@@ -1103,6 +1041,10 @@
   .leading-1 {
     --tw-leading: calc(var(--spacing) * 1);
     line-height: calc(var(--spacing) * 1);
+  }
+  .leading-10 {
+    --tw-leading: calc(var(--spacing) * 10);
+    line-height: calc(var(--spacing) * 10);
   }
   .leading-12 {
     --tw-leading: calc(var(--spacing) * 12);
@@ -1136,6 +1078,10 @@
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
   }
+  .font-normal {
+    --tw-font-weight: var(--font-weight-normal);
+    font-weight: var(--font-weight-normal);
+  }
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
@@ -1144,6 +1090,10 @@
     --tw-tracking: -0.01em;
     letter-spacing: -0.01em;
   }
+  .tracking-\[0\.1em\] {
+    --tw-tracking: 0.1em;
+    letter-spacing: 0.1em;
+  }
   .tracking-wider {
     --tw-tracking: var(--tracking-wider);
     letter-spacing: var(--tracking-wider);
@@ -1151,14 +1101,17 @@
   .break-words {
     overflow-wrap: break-word;
   }
-  .text-\[\#ddd\] {
-    color: #ddd;
+  .text-\[\#f3faff\] {
+    color: #f3faff;
   }
   .text-\[rgba\(0\,0\,0\,0\.8\)\] {
     color: rgba(0,0,0,0.8);
   }
-  .text-\[rgba\(221\,221\,221\,0\.8\)\] {
-    color: rgba(221,221,221,0.8);
+  .text-\[rgba\(178\,224\,255\,0\.7\)\] {
+    color: rgba(178,224,255,0.7);
+  }
+  .text-\[rgba\(211\,237\,255\,0\.8\)\] {
+    color: rgba(211,237,255,0.8);
   }
   .text-black {
     color: var(--color-black);
@@ -1184,6 +1137,9 @@
   .text-slate-400 {
     color: var(--color-slate-400);
   }
+  .text-transparent {
+    color: transparent;
+  }
   .text-white {
     color: var(--color-white);
   }
@@ -1192,9 +1148,6 @@
   }
   .no-underline {
     text-decoration-line: none;
-  }
-  .underline {
-    text-decoration-line: underline;
   }
   .decoration-0 {
     text-decoration-thickness: 0px;
@@ -1236,10 +1189,6 @@
     @supports (color: color-mix(in lab, red, red)) {
       --tw-shadow-color: color-mix(in oklab, rgba(8,0,245,0.1) var(--tw-shadow-alpha), transparent);
     }
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
   .blur-\[2px\] {
     --tw-blur: blur(2px);
@@ -1288,10 +1237,6 @@
   }
   .backdrop-blur-xs {
     --tw-backdrop-blur: blur(var(--blur-xs));
-    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
@@ -1764,6 +1709,31 @@
       }
     }
   }
+  .sm\:right-\[none\] {
+    @media (width >= 40rem) {
+      right: none;
+    }
+  }
+  .sm\:w-full {
+    @media (width >= 40rem) {
+      width: 100%;
+    }
+  }
+  .sm\:justify-center {
+    @media (width >= 40rem) {
+      justify-content: center;
+    }
+  }
+  .sm\:justify-items-center {
+    @media (width >= 40rem) {
+      justify-items: center;
+    }
+  }
+  .sm\:text-center {
+    @media (width >= 40rem) {
+      text-align: center;
+    }
+  }
   .sm\:text-4xl {
     @media (width >= 40rem) {
       font-size: var(--text-4xl);
@@ -1811,14 +1781,59 @@
       font-size: 18.5414px;
     }
   }
+  .lg\:end-0 {
+    @media (width >= 64rem) {
+      inset-inline-end: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:right-0 {
+    @media (width >= 64rem) {
+      right: calc(var(--spacing) * 0);
+    }
+  }
   .lg\:w-1\/2 {
     @media (width >= 64rem) {
       width: calc(1/2 * 100%);
     }
   }
+  .lg\:w-1\/4 {
+    @media (width >= 64rem) {
+      width: calc(1/4 * 100%);
+    }
+  }
+  .lg\:w-1\/5 {
+    @media (width >= 64rem) {
+      width: calc(1/5 * 100%);
+    }
+  }
   .lg\:w-2\/3 {
     @media (width >= 64rem) {
       width: calc(2/3 * 100%);
+    }
+  }
+  .lg\:justify-items-end {
+    @media (width >= 64rem) {
+      justify-items: end;
+    }
+  }
+  .lg\:justify-items-start {
+    @media (width >= 64rem) {
+      justify-items: start;
+    }
+  }
+  .lg\:px-10 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:text-left {
+    @media (width >= 64rem) {
+      text-align: left;
+    }
+  }
+  .lg\:text-right {
+    @media (width >= 64rem) {
+      text-align: right;
     }
   }
   .lg\:text-5xl {
@@ -1969,11 +1984,61 @@ body {
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
 }
+@keyframes fadeInOutcahaya {
+  0% {
+    opacity: 0;
+    width: 0;
+  }
+  50% {
+    opacity: 1;
+    width: 100%;
+  }
+  100% {
+    opacity: 0;
+    width: 0;
+  }
+}
 #gradasibmud3 {
-  animation-name: fadeInOut;
+  animation-name: fadeInOutcahaya;
   animation-duration: 4s;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
+}
+@keyframes scrollpanah {
+  0% {
+    transform: translateY(-100%);
+  }
+  50% {
+    transform: none;
+  }
+  100% {
+    transform: translateY(100%);
+  }
+}
+.panahscroll {
+  animation-name: scrollpanah;
+  animation-duration: 2.5s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-delay: 0.5s;
+}
+@keyframes gradient-sweep {
+  0% {
+    background-position: 200% 200%;
+  }
+  50% {
+    background-position: 50% 0%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
+}
+.definisi2 {
+  animation-name: gradient-sweep;
+  animation-duration: 3.5s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-delay: 0.5s;
 }
 @property --tw-translate-x {
   syntax: "*";
@@ -2129,11 +2194,6 @@ body {
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -2272,7 +2332,6 @@ body {
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
