--- a/src/output.css
+++ b/src/output.css
@@ -9,6 +9,7 @@
       "Courier New", monospace;
     --color-orange-500: oklch(70.5% 0.213 47.604);
     --color-green-600: oklch(62.7% 0.194 149.214);
+    --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-blue-800: oklch(42.4% 0.199 265.638);
     --color-indigo-500: oklch(58.5% 0.233 277.117);
     --color-pink-500: oklch(65.6% 0.241 354.308);
@@ -45,6 +46,7 @@
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --font-weight-black: 900;
+    --tracking-wide: 0.025em;
     --tracking-wider: 0.05em;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
@@ -469,6 +471,9 @@
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
+  .h-6\.5 {
+    height: calc(var(--spacing) * 6.5);
+  }
   .h-9 {
     height: calc(var(--spacing) * 9);
   }
@@ -540,6 +545,9 @@
   }
   .w-6 {
     width: calc(var(--spacing) * 6);
+  }
+  .w-6\.5 {
+    width: calc(var(--spacing) * 6.5);
   }
   .w-9 {
     width: calc(var(--spacing) * 9);
@@ -629,6 +637,9 @@
     --tw-scale-z: 100%;
     scale: var(--tw-scale-x) var(--tw-scale-y);
   }
+  .scale-none {
+    scale: none;
+  }
   .cursor-pointer {
     cursor: pointer;
   }
@@ -655,6 +666,9 @@
   }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
+  }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
   }
   .gap-16 {
     gap: calc(var(--spacing) * 16);
@@ -731,9 +745,6 @@
   }
   .bg-\[\#001eff\] {
     background-color: #001eff;
-  }
-  .bg-\[\#4accff\] {
-    background-color: #4accff;
   }
   .bg-\[\#0035e4\] {
     background-color: #0035e4;
@@ -861,9 +872,6 @@
   .bg-left {
     background-position: left;
   }
-  .fill-current {
-    fill: currentcolor;
-  }
   .stroke-\[rgba\(0\,0\,0\,0\.8\)\] {
     stroke: rgba(0,0,0,0.8);
   }
@@ -887,6 +895,9 @@
   }
   .px-1 {
     padding-inline: calc(var(--spacing) * 1);
+  }
+  .px-1\.5 {
+    padding-inline: calc(var(--spacing) * 1.5);
   }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
@@ -930,6 +941,9 @@
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
   }
+  .py-1\.5 {
+    padding-block: calc(var(--spacing) * 1.5);
+  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
@@ -951,6 +965,12 @@
   .py-\[10px\] {
     padding-block: 10px;
   }
+  .pt-1\.5 {
+    padding-top: calc(var(--spacing) * 1.5);
+  }
+  .pt-3 {
+    padding-top: calc(var(--spacing) * 3);
+  }
   .pt-5 {
     padding-top: calc(var(--spacing) * 5);
   }
@@ -971,6 +991,9 @@
   }
   .pt-\[7rem\] {
     padding-top: 7rem;
+  }
+  .pr-2 {
+    padding-right: calc(var(--spacing) * 2);
   }
   .pb-12 {
     padding-bottom: calc(var(--spacing) * 12);
@@ -1131,6 +1154,9 @@
   .text-secondary {
     color: var(--color-secondary);
   }
+  .text-slate-100 {
+    color: var(--color-slate-100);
+  }
   .text-slate-300 {
     color: var(--color-slate-300);
   }
@@ -1161,11 +1187,17 @@
   .opacity-30 {
     opacity: 30%;
   }
+  .opacity-45 {
+    opacity: 45%;
+  }
   .opacity-50 {
     opacity: 50%;
   }
   .opacity-70 {
     opacity: 70%;
+  }
+  .opacity-75 {
+    opacity: 75%;
   }
   .opacity-80 {
     opacity: 80%;
@@ -1478,6 +1510,13 @@
       }
     }
   }
+  .hover\:scale-\[1\.01\] {
+    &:hover {
+      @media (hover: hover) {
+        scale: 1.01;
+      }
+    }
+  }
   .hover\:scale-\[1\.1\] {
     &:hover {
       @media (hover: hover) {
@@ -1485,10 +1524,17 @@
       }
     }
   }
-  .hover\:border-green-600 {
+  .hover\:scale-\[1\.02\] {
     &:hover {
       @media (hover: hover) {
-        border-color: var(--color-green-600);
+        scale: 1.02;
+      }
+    }
+  }
+  .hover\:border-\[\#172afb\] {
+    &:hover {
+      @media (hover: hover) {
+        border-color: #172afb;
       }
     }
   }
@@ -1506,17 +1552,17 @@
       }
     }
   }
+  .hover\:bg-\[\#172afb\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #172afb;
+      }
+    }
+  }
   .hover\:bg-gray-950 {
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-gray-950);
-      }
-    }
-  }
-  .hover\:bg-green-600 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-green-600);
       }
     }
   }
@@ -1763,6 +1809,11 @@
   .md\:w-1\/3 {
     @media (width >= 48rem) {
       width: calc(1/3 * 100%);
+    }
+  }
+  .md\:w-1\/4 {
+    @media (width >= 48rem) {
+      width: calc(1/4 * 100%);
     }
   }
   .md\:text-lg {
